...
    <android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.v7.widget.RecyclerView
            android:id="@+id/notes_recycler"
            app:layoutManager="LinearLayoutManager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="@dimen/bottom_sheet_peek_height"/>
...
            android:id="@+id/notes_fragment_options_container"
            app:behavior_hideable="false"
            app:behavior_peekHeight="@dimen/bottom_sheet_peek_height"
            app:layout_behavior="android.support.design.widget.BottomSheetBehavior"/>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/notes_create_note_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_plus"
            android:layout_margin="6dp"
            app:useCompatPadding="true"
            app:layout_anchor="@+id/notes_fragment_options_container"
...
