<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/note_menu_delete"
        android:icon="@drawable/ic_delete"
        android:title="@string/note_delete"
        app:showAsAction="always"/>
</menu>